# wheel-of-learning

./: .gitignore  .proxyrc  justfile  package-lock.json  package.json  pyproject.toml
tests/: test_task.py
wheel-of-learning-frontend/: Winwheel.js  index.html  script.js  style.css
wheel_of_learning_backend/: __init__.py  cli.py  db.py  deploy.py  manager.py  server.py  task.py  wrapper.py
