[tool.poetry]
name = "wheel-of-learning-backend"
version = "0.1.0"
description = ""
authors = ["Dima Lipin <dimich3d@ya.ru>"]
readme = "README.md"
packages = [{include = "wheel_of_learning_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
tinydb = "^4.7.1"
pytest = "^7.2.1"
typer = {extras = ["all"], version = "^0.7.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yapf] 
based_on_style = "google"
spaces_before_comment = 4
split_before_logical_operator = true
indent_width = 4

[tool.pylint.messages_control]

max-line-length = 120

disable = [
  "missing-docstring",
  "C0103",
  # "unused-argument",
  # "no-value-for-parameter",
  # "no-member",
  # "no-else-return",
  # "bad-whitespace",
  # "bad-continuation",
  # "line-too-long",
  # "fixme",
  # "protected-access",
  # "too-few-public-methods",
]
